--- a/package.json
+++ b/package.json
@@ -9,8 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@tippyjs/react": "^4.2.6",
+    "formik": "^2.4.5",
+    "formik-mui": "^5.0.0-alpha.0",
+    "mongoose": "^8.1.3",
+    "next": "14.0.3",
+    "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-tagcloud": "^2.3.3",
+    "react-wordcloud": "^1.2.7",
+    "stylis-plugin-rtl": "^2.1.1",
+    "sweetalert2": "^11.10.5",
+    "TagCloud": "^2.4.0",
+    "tippy.js": "^6.3.7"
   }
 }
